# napari-sift-registration

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_sift_registration/: __init__.py  _widget.py  napari.yaml
src/napari_sift_registration/_tests/: test_widget.py
src/skimage_sift_registration/: _widget.py  napari.yaml
src/skimage_sift_registration/_tests/: test_widget.py
